migrate to labeled switch in settings, fix a bug where a switch inside a form produced an overflowing absolute input

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,6 @@
 
 html {
   font-family: theme("fontFamily.lato");
-  overflow: hidden;
 }
 
 @media (pointer: fine), (pointer: none) {
